--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "airbnb": "^0.0.2",
+    "axios": "^0.27.2",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
